--- a/designs/template.html
+++ b/designs/template.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RE:vamp - Make stuff better </title>
-    <link rel="shortcut icon" href="/public/assets/images/fav.png" type="image/x-icon">  
+    <link rel="shortcut icon" href="public/assets/images/fav.png" type="image/x-icon">  
 
         <!-- ======= StyleSheets ======== -->
-    <link rel="stylesheet" href="/public/css/reset.css">
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="./public/css/reset.css">
+    <link rel="stylesheet" href="./public/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/public/assets/css/styleHeader.css">
-    <link rel="stylesheet" href="/css/jass.css">
+    <link rel="stylesheet" href="./public/assets/css/styleHeader.css">
 
         <!-- ======= Google fonts ======== -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -50,13 +49,13 @@
     </header>
     <!-- ============================ -->
 
-<div class="justify-content-center">
-                {{{ body }}}
-</div>
+
+
+
 
     <!-- ============================ -->
     <footer class="justify-content-center">
-        <div class="justify-content-center">
+        <div>
             <p>
                 We acknowledge the Traditional Owners and Custodians of the lands on which we work <br> and pay our respects to Indigenous Elders past, present and emerging.
             </p>
@@ -65,8 +64,5 @@
 
 </body>
 <!-- ==== Scripts ==== -->
-{{#if logged_in}}
-<script src="/js/logout.js"></script>
-{{/if}}
 
 </html>
