--- a/designs/template.html
+++ b/designs/template.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RE:vamp - Make stuff better </title>
-    <link rel="shortcut icon" href="public/assets/images/fav.png" type="image/x-icon">  
+    <link rel="shortcut icon" href="public/assets/images/fav.png" type="image/x-icon">
 
-        <!-- ======= StyleSheets ======== -->
-    <link rel="stylesheet" href="./public/css/reset.css">
-    <link rel="stylesheet" href="./public/css/style.css">
+    <!-- ======= StyleSheets ======== -->
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./public/assets/css/styleHeader.css">
+    <link rel="stylesheet" href="/css/styleHeader.css">
 
-        <!-- ======= Google fonts ======== -->
+    <!-- ======= Google fonts ======== -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,600;0,700;1,100;1,200;1,600;1,700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
-        <img class="topImage" src="public/assets/images/placeholder.png" width="680px"></img>
+        <img class="topImage" src="assets/images/placeholder.png" width="680px"></img>
         <ul class="nav justify-content-center">
             <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
@@ -38,10 +40,10 @@
                 <a class="nav-link" href="#">Painting</a>
             </li>
             {{#if logged_in}}
-            <li class="nav-link"> 
+            <li class="nav-link">
                 <a href="/profile"> Profile </a></li>
             {{else}}
-            <li class="nav-link"> 
+            <li class="nav-link">
                 <a href="/login">login</a></li>
             {{/if}}
         </ul>
